# MBA-USP-Esalq-2022

./: .READ.me
Análise de Regressao Simples e Multipla/: README.md
Coleta de dados/: pyproject.toml  scraping_colab.ipynb
Deep Learning 2/: Aula_2_2_1 (corrigido).ipynb  Aula_2_2_1 (utilizado em aula).ipynb  Aula_2_2_2 (utilizado em aula).ipynb  pyproject.toml
Deep Learning 3/: Aula_3_1_1.ipynb  main.py  pyproject.toml
Introducao ao Deep Learning/: Aula_1_1_1.ipynb  pyproject.toml
Resolucao de exercicio adicionais de arvores e ensemble models/: pyproject.toml
Resolucao de exercicio adicionais de arvores e ensemble models/Ensemble - Complementar/: SCRIPT - Ensemble (Complementar).py
Resolucao de exercicio adicionais de arvores e ensemble models/Árvores e Ensemble/: SCRIPT - Modelos de Classificação.py
Series Temporais/: pyproject.toml
Series Temporais/codigo/: dados_petroleo.csv
Support Vector Machine/: pyproject.toml
TCC - Material Complementar/: pyproject.toml  queimadas.py
delete_later/: Teste copy.ipynb  Teste.ipynb  pyproject.toml
text-mining-1/: pyproject.toml  text_mining_1_colab.ipynb
text-mining-2/: text_mining_2_colab.ipynb
