[project]
name = "deep_learning_2"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernanda Prado",email = "fehfeprado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"

