[project]
name = "resolucao_exercicios_adicionais_arvores_ensemble_models"
version = "0.1.0"
description = "Ambiente virtual para execução dos scripts para resolução de exercícios adicionais proporcionado pelo Prof. Dr. Wilson Tarantin Júnior"
authors = [
    {name = "Fernanda Prado",email = "fehfeprado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
