[project]
name = "svm"
version = "0.1.0"
description = "Ambiente virtual para suportar o código da aula de Support Vector Machines ministrada pelo Prof. Dr. Wilson Tarantin Junior"
authors = [
    {name = "Fernanda Prado, fehfeprado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
