[project]
name = "tcc"
version = "0.1.0"
description = "Environment for end of the course work"
authors = [
    {name = "Fernanda Prado",email = "fehfeprado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.0"

