[project]
name = "delete-later"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernanda Prado",email = "fehfeprado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets (>=8.1.7,<9.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.2"

