[project]
name = "text-mining-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Fernanda Prado, fehfeprado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "translate (>=3.6.1,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.3.3"

